   space of each path <= reserved space (the total free space > reserved space)
 * storage_sync.c: when connect fail, do not change the dest storage server '
   status to offline
 * tracker_service.c and storage_service.c change log level from WARNING to DEBUG 
   when client connection disconnected
 * bug fixed: tracker_client.c correct store_path_index return by tracker server
 * add service shell scripts in directory: init.d 
   (services will auto installed on Linux)

Version 1.20  2009-09-05
 * base64 use context, functions changed
 * common/ini_file_reader.c: fix memory leak
 * tracker server support HTTP protocol, one thread mode
 * storage server support HTTP protocol, one thread mode
 * fix bug: storage server rebuild, auto sync data correctly
 * fix bug: sync data fail (correct storage server status)
 * when storage server idle time exceeds check_active_interval seconds, 
   set it's status to offline
 * tracker counter thread safely

Version 1.19  2009-07-23
 * use poll instead of select in sockopt.c
 * hash.c use chain impl by self
 * use FastDHT 1.09 client code
 * ini reader support HTTP protocol, conf file can be an url
 * correct test dir compile error
 * use non-block socket to increase network IO performance
 * add cmd TRACKER_PROTO_CMD_SERVICE_QUERY_FETCH_ALL: query all storage servers 
   from which the file can be dowloaded
 * while (1) ... break; changed to do ... while (0);

Version 1.18  2009-05-24
 * restart.sh only kill the programs match the program name and all parameters
 * correct get local ip addresses
 * common files do not use global vars like g_network_timeout and g_base_path
 * download file support offset and download bytes
 * hash function change type from unsigned int to signed int
 * file size in file name support 64 bits, old bytes is 4, new bytes is 8

Version 1.17  2009-03-19
  * add test programs at sub directory test/
  * common/shared_func.c: rindex change to strrchr, add #include <netinet/in.h>