@@ -11,6 +11,8 @@ Version 1.21  2009-09-18
  * tracker_service.c and storage_service.c change log level from WARNING to DEBUG 
    when client connection disconnected
  * bug fixed: tracker_client.c correct store_path_index return by tracker server
+ * bug fixed: tracker_service.c when store_lookup set to 2 (load balance), use 
+   another pthread lock to avoid long time lock waiting
  * add service shell scripts in directory: init.d 
    (services will auto installed on Linux)
 
